# qt5tests

./: .gitignore  CMakeLists.txt
01-Introduction/: CMakeLists.txt
01-Introduction/01-qtversion/: CMakeLists.txt
02-First-Programs/: CMakeLists.txt
02-First-Programs/01-qtminimalgui/: CMakeLists.txt
02-First-Programs/02-qtcursors/: CMakeLists.txt
02-First-Programs/03-qtpushbutton/: CMakeLists.txt  main.cpp  mybutton.h
02-First-Programs/04-qtplusminus/: CMakeLists.txt  main.cpp
03-Menus-Toolbars/: CMakeLists.txt
03-Menus-Toolbars/01-qtsimplemenu/: CMakeLists.txt  simplemenu.cpp
03-Menus-Toolbars/02-qtcheckablemenu/: CMakeLists.txt  checkable.cpp  main.cpp
03-Menus-Toolbars/03-qttoolbar/: CMakeLists.txt  application.qrc  main.cpp  toolbar.cpp  toolbar.h
04-Layout-Mgmt/: CMakeLists.txt
04-Layout-Mgmt/01-qtabsoluteposition/: CMakeLists.txt  absolute.cpp  absolute.h  main.cpp
04-Layout-Mgmt/02-qvboxlayout/: CMakeLists.txt  main.cpp  verticalbox.cpp  verticalbox.h
04-Layout-Mgmt/03-qtbuttons/: CMakeLists.txt  buttons.cpp  buttons.h  main.cpp
04-Layout-Mgmt/04-qtnesting/: CMakeLists.txt  main.cpp  nesting.cpp  nesting.h
04-Layout-Mgmt/05-qtformlayout/: CMakeLists.txt  form.cpp  form.h  main.cpp
04-Layout-Mgmt/06-qtgridlayout/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
04-Layout-Mgmt/07-qtreview/: CMakeLists.txt  main.cpp  review.cpp  review.h
05-Events-Signals/: CMakeLists.txt
05-Events-Signals/01-qtclick/: CMakeLists.txt  click.cpp  click.h  main.cpp
05-Events-Signals/02-qtkeypress/: CMakeLists.txt  keypress.cpp  keypress.h  main.cpp
05-Events-Signals/03-qtmoveevent/: CMakeLists.txt  main.cpp  move.cpp  move.h
05-Events-Signals/04-qtdisconnect/: CMakeLists.txt  disconnect.cpp  disconnect.h  main.cpp
05-Events-Signals/05-qttimer/: CMakeLists.txt  main.cpp  timer.cpp  timer.h
06-Widgets/: CMakeLists.txt
06-Widgets/01-qlabel/: CMakeLists.txt  label.cpp  label.h  main.cpp
06-Widgets/02-qslider/: CMakeLists.txt  main.cpp  slider.cpp  slider.h
06-Widgets/03-qcombobox/: CMakeLists.txt  combobox.cpp  combobox.h  main.cpp
06-Widgets/04-qspinbox/: CMakeLists.txt  main.cpp  spinbox.cpp  spinbox.h
06-Widgets/05-qlineedit/: CMakeLists.txt  ledit.cpp  ledit.h  main.cpp
06-Widgets/06-statusbar/: CMakeLists.txt  main.cpp  statusbar.cpp  statusbar.h
06-Widgets/07-qcheckbox/: CMakeLists.txt  checkbox.cpp  checkbox.h  main.cpp
06-Widgets/08-qlistwidget/: CMakeLists.txt  listwidget.cpp  listwidget.h  main.cpp
06-Widgets/09-qprogressbar/: CMakeLists.txt  main.cpp  progressbar.cpp  progressbar.h
06-Widgets/10-qpixmap/: CMakeLists.txt  main.cpp  pixmap.cpp  pixmap.h
06-Widgets/11-qsplitter/: CMakeLists.txt  main.cpp  splitter.cpp  splitter.h
06-Widgets/12-qtablewidget/: CMakeLists.txt  main.cpp  table.cpp  table.h
07-painting/: CMakeLists.txt
07-painting/01-lines/: CMakeLists.txt  lines.cpp  lines.h  main.cpp
07-painting/02-colours/: CMakeLists.txt  colours.cpp  colours.h  main.cpp
07-painting/03-patterns/: CMakeLists.txt  main.cpp  patterns.cpp  patterns.h
07-painting/04-transparent_rectangles/: CMakeLists.txt  main.cpp  transparent_rectangles.cpp  transparent_rectangles.h
07-painting/05-donut/: CMakeLists.txt  donut.cpp  donut.h  main.cpp
07-painting/06-shapes/: CMakeLists.txt  main.cpp  shapes.cpp  shapes.h
07-painting/07-gradients/: CMakeLists.txt  linear_gradients.cpp  linear_gradients.h  main.cpp
07-painting/08-radial_gradient/: CMakeLists.txt  main.cpp  radial_gradient.cpp  radial_gradient.h
07-painting/09-puff/: CMakeLists.txt  main.cpp  puff.cpp  puff.h
08-Custom-Widgets/: CMakeLists.txt
08-Custom-Widgets/01-custom_widget/: CMakeLists.txt  application.cpp  application.h  main.cpp  widget.cpp  widget.h
09-games/: CMakeLists.txt
09-games/01-snake/: CMakeLists.txt  main.cpp  snake.cpp  snake.h
09-games/02-breakout/: CMakeLists.txt  ball.cpp  ball.h  breakout.cpp  breakout.h  brick.cpp  brick.h  main.cpp  paddle.cpp  paddle.h
qt5checkablemenu/: CMakeLists.txt  checkable.h
qt5cursors/: CMakeLists.txt  cursors.cpp  cursors.h  main.cpp
qt5minimalgui/: CMakeLists.txt  main.cpp
qt5plusminus/: CMakeLists.txt  plusminus.cpp  plusminus.h
qt5pushbutton/: CMakeLists.txt  mybutton.cpp
qt5simplemenu/: CMakeLists.txt  main.cpp  simplemenu.h
qt5toolbar/: CMakeLists.txt  toolbar.cpp
qt5version/: CMakeLists.txt  CMakeSettings.json  main.cpp
