cmake_minimum_required( VERSION 3.16 )

project ( qtwidgets )

add_subdirectory(01-qlabel)
add_subdirectory(02-qslider)
add_subdirectory(03-qcombobox)
add_subdirectory(04-qspinbox)
add_subdirectory(05-qlineedit)
add_subdirectory(06-statusbar)
add_subdirectory(07-qcheckbox)
add_subdirectory(08-qlistwidget)
add_subdirectory(09-qprogressbar)
